--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.1"
   }
 }
